# console

./: .dockerignore  .env  .gitignore  .gitmodules  .prettierignore  404.html  CNAME  Cargo.toml  configurations.html  configurations.txt  create.html  create.txt  docker-compose.yml  environments.html  environments.txt  index.html  index.txt  jest.config.ts  keyrings.html  keyrings.txt  marketplace.html  marketplace.txt  next.config.js  package-lock.json  package.json  providers.html  providers.txt  resources.html  resources.txt  tailwind.config.ts  tsconfig.json
.chglog/: CHANGELOG.tpl.md  config.yml
.github/workflows/: checks.yml  ci.yml  deploy-console.yml  deploy.yml  release.yml
app/: .env  .gitignore  next.config.js  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
cluster/anchor/: Makefile
cluster/app/: Dockerfile  Makefile
marketplace/: configuration.html  configuration.txt  gas.html  gas.txt
marketplace/configuration/: collection.html  collection.txt
marketplace/gas/: collection.txt  (+1 more)
programs/environment/: Cargo.toml
programs/environment/src/: entrypoint.rs  lib.rs
programs/environment/src/instructions/: create.rs  mod.rs
programs/environment/src/state/: environment.rs  mod.rs  utils.rs
programs/environment/tests/: create_env.rs
programs/provider/: Cargo.toml
programs/provider/src/: entrypoint.rs  errors.rs  lib.rs
programs/provider/src/instructions/: mod.rs  register.rs
programs/provider/src/state/: mod.rs  provider.rs  utils.rs
programs/provider/tests/: create_provider.rs
tests/: environment.ts  provider.ts
(+388 files in other folders)
