[package]
name = "environment"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "environment"

[features]
no-entrypoint = []
std = []
test-default = ["no-entrypoint", "std"]


[dependencies]
api = { path = "../../api/rust" }
pinocchio = "0.8.4"
pinocchio-log = "0.4.0"
pinocchio-pubkey = "0.2.4"
pinocchio-system = "0.2.3"
shank = "0.4.2"
bs58 = "0.5.1"
prost = "0.13.5"
prost-types = "0.13.5"
solana-program = "2.3.0"

[dev-dependencies]
solana-sdk = "2.2.1"
mollusk-svm = "0.3.0"
mollusk-svm-bencher = "0.3.0" 
